(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(executable
 (name sail_plugin_json)
 (modes
  (native plugin))
 (libraries libsail))

(install
 (section
  (site
   (libsail plugins)))
 (package sail_json_backend)
 (files sail_plugin_json.cmxs))
