(env
 (dev
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
 (release
  (flags
   (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(executable
 (name sail_plugin_latex)
 (modes
  (native plugin))
 (link_flags -linkall)
 (libraries libsail omd)
 (embed_in_plugin_libraries omd))

(install
 (section
  (site
   (libsail plugins)))
 (package sail_latex_backend)
 (files sail_plugin_latex.cmxs))
